Jumbotron for images

--- a/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
@@ -1,7 +1,9 @@
 <!-- This is the BOXES template. -->
 
+{{ instance.pluginheight }}px<br>
 {% for item in items %}
     <p>
+
         {{ instance.id }}<br>
         {{ item.order }}<br>
         {{ item.item_list }}<br>
