--- a/spe_ui_components/templates/carousel/carouselheader.html
+++ b/spe_ui_components/templates/carousel/carouselheader.html
@@ -4,7 +4,8 @@
     <ol class="carousel-indicators">
         {% for carousel in instance.child_plugin_instances %}
             {% if forloop.first %}
-                <li data-target="#carousel-plugin-{{ instance.id }}" data-slide-to="{{ forloop.counter0 }}" class="active"></li>
+                <li data-target="#carousel-plugin-{{ instance.id }}" data-slide-to="{{ forloop.counter0 }}"
+                    class="active"></li>
             {% else %}
                 <li data-target="#carousel-plugin-{{ instance.id }}" data-slide-to="{{ forloop.counter0 }}"></li>
             {% endif %}
