--- a/spe_custom_agenda/templates/cms_plugins/agenda.html
+++ b/spe_custom_agenda/templates/cms_plugins/agenda.html
@@ -1,29 +1,37 @@
 <head>
     <style>
-        .agenda {  }
+        .agenda {
+        }
 
         /* Dates */
-        .agenda .agenda-date { width: 170px; }
-        .agenda .agenda-date .dayofmonth {
-          width: 40px;
-          font-size: 36px;
-          line-height: 36px;
-          float: left;
-          text-align: right;
-          margin-right: 10px;
-        }
-        .agenda .agenda-date .shortdate {
-          font-size: 0.75em;
+        .agenda .agenda-date {
+            width: 170px;
         }
 
+        .agenda .agenda-date .dayofmonth {
+            width: 40px;
+            font-size: 36px;
+            line-height: 36px;
+            float: left;
+            text-align: right;
+            margin-right: 10px;
+        }
+
+        .agenda .agenda-date .shortdate {
+            font-size: 0.75em;
+        }
 
         /* Times */
-        .agenda .agenda-time { width: 140px; }
-
+        .agenda .agenda-time {
+            width: 140px;
+        }
 
         /* Events */
-        .agenda .agenda-events {  }
-        .agenda .agenda-events .agenda-event {  }
+        .agenda .agenda-events {
+        }
+
+        .agenda .agenda-events .agenda-event {
+        }
 
         @media (max-width: 767px) {
 
@@ -33,19 +41,19 @@
 
 <div class="table-responsive">
 
-<h2>{{ title }}</h2>
-    <hr />
+    <h2>{{ title }}</h2>
+    <hr/>
     <div class="agenda">
         <div class="table-responsive">
             <table class="table table-condensed table-bordered">
                 <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Event</th>
-                        <th>Location</th>
-                        <th>Description</th>
-                    </tr>
+                <tr>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Event</th>
+                    <th>Location</th>
+                    <th>Description</th>
+                </tr>
                 </thead>
                 <tbody>
 
@@ -57,31 +65,33 @@
                                 <div class="dayofweek">{{ item.start_date | date:"l" }}</div>
                                 <div class="shortdate text-muted">{{ item.start_date | date:"F" }}, {{ item.start_date | date:"Y" }}</div>
                             </td>
-                    {% else %}
+                            {% else %}
                         <tr>
                     {% endif %}
-                        <td class="agenda-time">
-                            {{ item.start_time | date:"H:i" }} - {{ item.end_time | date:"H:i" }}
-                        </td>
-                        <td class="agenda-events">
-                            <div class="agenda-event">
-                                {{ item.title }}
-                            </div>
-                        </td>
-                        <td>
-                            <div class=""agenda-event">
-                                {{ item.location }}
-                            </div>
-                        </td>
-                        <td>
-                            <div class=""agenda-event">
-                                {{ item.session_description | safe}}
-                            </div>
-                        </td>
+                <td class="agenda-time">
+                    {{ item.start_time | date:"H:i" }} - {{ item.end_time | date:"H:i" }}
+                </td>
+                <td class="agenda-events">
+                    <div class="agenda-event">
+                        {{ item.title }}
+                    </div>
+                </td>
+                <td>
+                    <div class="" agenda-event
+                    ">
+                    {{ item.location }}
+                    </div>
+                    </td>
+                    <td>
+                        <div class="" agenda-event
+                        ">
+                        {{ item.session_description | safe }}
+                    </div>
+                    </td>
                     </tr>
                 {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
+    </tbody>
+    </table>
+</div>
+</div>
 </div>
