--- a/spe_ui_components/templates/basic/column.html
+++ b/spe_ui_components/templates/basic/column.html
@@ -5,10 +5,11 @@
     {% if not instance.transparent %}
         background-color: {{ instance.bkg_color }};
     {% endif %}
-}
+    }
 </style>
 
-<div class="{{instance.get_column_classes}} style-{{ instance.id }}" id="{{instance.element_id}}" styles="{{instance.element_style}}">
+<div class="{{ instance.get_column_classes }} style-{{ instance.id }}" id="{{ instance.element_id }}"
+     styles="{{ instance.element_style }}">
     {% for plugin in instance.child_plugin_instances %}
         {% render_plugin plugin %}
     {% endfor %}
