--- a/spe_events/templates/atce/atce_homepage.html
+++ b/spe_events/templates/atce/atce_homepage.html
@@ -5,13 +5,13 @@
 
 {% block cms_content %}
 
-    <div class="row">{% placeholder "Feature Slider" %}</div>
+    <div class="container-fluid">{% placeholder "Feature Slider" %}</div>
 
-    <div class="row">{% placeholder "Content Area One" %}</div>
+    <div class="container-fluid">{% placeholder "Content Area One" %}</div>
 
-    <div class="row sponsorBar">{% placeholder "Sponsor Band" %}</div>
+    <div class="container-fluid sponsorBar">{% placeholder "Sponsor Band" %}</div>
 
-    <div class="row">{% placeholder "Content Area Two" %}</div>
+    <div class="container-fluid">{% placeholder "Content Area Two" %}</div>
 
 {#    <div class="row byTheNumbersBar">#}
 {#        <div class="col-xs-12 text-center">#}
@@ -39,11 +39,11 @@
 {#        </div>#}
 {#    </div>#}
 
-    <div class="row">{% placeholder "Content Area Three" %}</div>
+    <div class="container-fluid">{% placeholder "Content Area Three" %}</div>
 
-    <div class="row">{% placeholder "Content Area Four" %}</div>
+    <div class="container-fluid">{% placeholder "Content Area Four" %}</div>
 
-    <div class="row">{% placeholder "Map" %}</div>
+    <div class="container-fluid">{% placeholder "Map" %}</div>
 
 {% endblock cms_content %}
 
