--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -8,6 +8,7 @@
 /* PANELS */
 
 .panel-intro {
+  border:                 0;
   .panel-body {
     padding:              0;
   }
@@ -56,34 +57,68 @@
 
 $jumboSliderHeight:       500px;
 #jumboCarousel {
-  //height:               $jumboSliderHeight;
   .carousel-inner {
-    //height:               $jumboSliderHeight;
 
     .item {
-      height:               $jumboSliderHeight;
-      //background-position:  center;
-      //background-size:      cover;
+      height:             $jumboSliderHeight;
     }
 
     .carousel-caption {
-      background-image:     $img-back-black-70;
-      width:                100%;
-      bottom:               0;
-      left:                 0;
-      padding-left:         10px;
-      padding-right:        10px;
-      padding-bottom:       50px;
+      background-image:   $img-back-black-70;
+      width:              100%;
+      bottom:             0;
+      left:               0;
+      padding-left:       10px;
+      padding-right:      10px;
+      padding-bottom:     50px;
     }
   }
 }
 
 .jumbotron {
-  //height: 400px;
-  margin: 0;
+  margin:                 0;
+    @include border-radius(0);
+}
 
-  //.jumbolink {
-  //  height: 100%;
-  //  width:  100%;
-  //}
+#registercol {
+  height:                 100px;
+  padding:                25px 0;
+
+  button {
+    background:           $col-atce-green;
+    color:                $col-white;
+    padding:              10px 20px;
+    border-collapse:      separate;
+    border:               0 solid $col-atce-green;
+
+    @include border-radius(5px);
+    @include text-shadow(1px, 1px, 2px, rgba(0,0,0,.4));
+  }
+}
+
+$itemboxpadding:  20px;
+.itembox {
+  padding:        $itemboxpadding;
+  position:       relative;
+
+  .panel, .innerbox {
+    overflow:     hidden;
+  }
+
+  .innerpanel, .panel-body {
+    position:     absolute;
+    bottom:       $itemboxpadding;
+    background:   $img-back-black-70 repeat center center / cover;
+    //width:        100%;
+
+    .panel-body {
+      padding:      10px;
+    }
+
+    h2 {
+      color:        $col-white;
+      margin:       0;
+      padding:      0;
+    }
+  }
 }
