--- a/spe_events/static/atce/css/_basehtml.scss
+++ b/spe_events/static/atce/css/_basehtml.scss
@@ -10,9 +10,10 @@ body {
   font-family:            $font-main;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
   font-family:            $font-titles;
   font-weight:            $font-regular;
+  margin:                 0;
 }
 
 h1 {
