--- a/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
@@ -1,17 +1,20 @@
 <!-- This is the Sponsor Coveyor template. -->
+{# {{ instance.pluginheight }}px#}
 
-{% for item in items %}
-    <p>
-    {{ item.order }}<br>
-    {{ item.item_list }}<br>
-    {{ item.image }}<br>
-    {{ item.title }}<br>
-    {{ item.text }}<br>
-    {{ item.external_link }}<br>
-    {{ item.internal_link }}<br>
-    {{ item.isvisible }}<br>
-    {{ item.issponsor }}<br>
-    {{ item.sponsorlevele }}<br>
-    {{ item.sponsoredevents }}<br>
-    </p>
-{% endfor %}
+<div class="row">
+    {% for item in items %}
+        {% if item.isvisible %}
+            <div class="{% if items.count >= 4 %}
+                    col-xs-6 col-sm-6 col-md-3 col-lg-3
+                {% elif items.count == 3 %}
+                    col-xs-6 col-sm-6 col-md-4 col-lg-4
+                {% elif items.count == 2 %}
+                    col-xs-6 col-sm-6 col-md-6 col-lg-6
+                {% elif items.count == 1 %}
+                    col-xs-12
+                {% endif %} " style="height: {{ instance.pluginheight }}px">
+                <div class="speakerimage" style="background: url({{ item.image.url }}) no-repeat {{ item.imageposition }} / cover;"></div>
+            </div>
+        {% endif %}
+    {% endfor %}
+</div>
