--- a/spe_events/static/atce/css/_header.scss
+++ b/spe_events/static/atce/css/_header.scss
@@ -41,6 +41,7 @@
 }
 .topAddress {
   color:              $col-spe-blue-dark;
+  margin-top:         20px;
 }
 .mainLogoImg {
   max-width:          400px;
