--- a/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
@@ -1,7 +1,7 @@
 <!-- This is the Sponsor Coveyor template. -->
 {# {{ instance.pluginheight }}px#}
 
-<div class="row">
+<div class="row sponsorCoveyor">
     {% for item in items %}
         {% if item.isvisible %}
             <div class="{% if items.count >= 4 %}
