--- a/spe_events/static/atce/css/_basehtml.scss
+++ b/spe_events/static/atce/css/_basehtml.scss
@@ -13,7 +13,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family:            $font-titles;
   font-weight:            $font-regular;
-  margin:                 0;
+  margin:                 0 0 10px 0;
 }
 
 h1 {
