--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -57,6 +57,7 @@
 }
 .sponsorBar {
   background-color:       $col-grey-light;
+  padding:                20px 0;
 }
 .byTheNumbersBar {
   background-color:       $col-atce-green;
