--- a/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
@@ -60,7 +60,8 @@
             margin:0 auto;
             top:0;
             left:0;
-            width:100%;
+            width:1080px;
+{#            width:100%;#}
             height:100px;
             overflow:hidden;
             visibility:hidden;
@@ -79,7 +80,8 @@
             display: block;
             top: 0;
             left: 0;
-            width: 100%;
+            width:1080px;
+{#            width:100%;#}
             height: 100%;
         }
         .horizloadimg {
@@ -88,8 +90,8 @@
             background:url('{% static 'conveyor/loading.gif' %}') no-repeat center center;
             top:0;
             left:0;
-            {#            width:980px;#}
-            width:100%;
+            width:1080px;
+{#            width:100%;#}
             height:100%;
         }
         .horizslides {
@@ -98,8 +100,8 @@
             position:relative;
             top:0;
             left:0;
-{#            width:980px;#}
-            width:100%;
+            width:1080px;
+{#            width:100%;#}
             height:100px;
             overflow:hidden;
         }
