--- a/mainsite/templates/include_www_header.html
+++ b/mainsite/templates/include_www_header.html
@@ -379,6 +379,44 @@
 {#                            {{ variables.is_local_ip }}#}
 {#                            {{ variables.cip }}#}
 
+                            {% if variables.is_local_ip == True %}
+                            <div class="gse-search" style="width: 350px">
+                                <!-- These styles fix CSE and Bootstrap 3 conflict -->
+                                <style type="text/css">
+                                    .gsc-adBlock {
+                                        opacity: 0.5;
+                                    }
+                                    .reset-box-sizing, .reset-box-sizing *, .reset-box-sizing *:before, .reset-box-sizing *:after,  .gsc-inline-block
+                                    {
+                                        -webkit-box-sizing: content-box;
+                                        -moz-box-sizing: content-box;
+                                        box-sizing: content-box;
+                                    }
+                                    input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gsc-search-button
+                                    {
+                                        box-sizing: content-box;
+                                        line-height: normal;
+                                    }
+                                    .gsc-control-cse {
+                                        padding: 0;
+                                    }
+                                </style>
+                                <script>
+                                    (function() {
+                                        var cx = '012047942974714092081:nqecmqbznzc';
+                                        {#  var cx = '007919311804914109615:_7f3pu6glfg'; #}
+                                        var gcse = document.createElement('script');
+                                        gcse.type = 'text/javascript';
+                                        gcse.async = true;
+                                        gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                        var s = document.getElementsByTagName('script')[0];
+                                        s.parentNode.insertBefore(gcse, s);
+                                    })();
+                                </script>
+                                <gcse:search></gcse:search>
+                            </div>
+                            {% endif %}
+
                             <div class="betaSearch" style="font-weight:bold;font-size:12px">
                                 <a href="https://search.spe.org"><i class="fa fa-caret-square-o-right" aria-hidden="true"></i> Try our Beta Search</a>
                             </div>
