--- a/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor.html
@@ -2,125 +2,36 @@
 {% load cms_tags staticfiles sekizai_tags %}
 {# {{ instance.pluginheight }}px#}
 
-<!-- #region Jssor Slider Begin -->
-{#    <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>#}
-    <script src="{% static 'conveyor/jssor.slider-23.0.0.mini.js' %}" type="text/javascript"></script>
-    <script type="text/javascript">
 
-        jQuery(document).ready(function ($) {
 
-            var screenwidth = $( window ).width();
-            $( window ).resize(function() {
-              screenwidth = $( window ).width();
-            });
 
-            var jssor_1_options = {
-              $AutoPlay: 1,
-              $Idle: 0,
-              $AutoPlaySteps: 4,
-              $SlideDuration: 2500,
-              $SlideEasing: $Jease$.$Linear,
-              $PauseOnHover: 4,
-              $SlideWidth: 140,
-              $Cols: 10
-            };
 
-            var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
-
-            /* responsive code begin */
-            /* remove responsive code if you don't want the slider to scale while the window resizes */
-            function ScaleSlider() {
-                var refSize = jssor_1_slider.$Elmt.parentNode.clientWidth;
-                if (refSize) {
-{#                    refSize = Math.min(refSize, 950);#}
-                    refSize = Math.min(refSize, screenwidth);
-                    jssor_1_slider.$ScaleWidth(refSize);
-                }
-                else {
-                    window.setTimeout(ScaleSlider, 30);
-                }
-            }
-
-            ScaleSlider();
-            $(window).bind("load", ScaleSlider);
-            $(window).bind("resize", ScaleSlider);
-            $(window).bind("orientationchange", ScaleSlider);
-            /*responsive code end*/
-
-        });
-
-    </script>
-    <style>
-        div {
-/*            border: 1px solid hotpink;*/
-        }
-        .horizslider {
-/*            border: 1px solid hotpink;*/
-            position:relative;
-            margin:0 auto;
-            top:0;
-            left:0;
-            width:1080px;
-{#            width:100%;#}
-            height:100px;
-            overflow:hidden;
-            visibility:hidden;
-        }
-        .horizloading {
-/*            border: 1px solid blue;*/
-            position:absolute;
-            top:0;
-            left:0;
-            background-color:rgba(0,0,0,0.7);
-        }
-        .horizloadfilter {
-            filter: alpha(opacity=70);
-            opacity: 0.7;
-            position: absolute;
-            display: block;
-            top: 0;
-            left: 0;
-            width:1080px;
-{#            width:100%;#}
-            height: 100%;
-        }
-        .horizloadimg {
-            position:absolute;
-            display:block;
-            background:url('{% static 'conveyor/loading.gif' %}') no-repeat center center;
-            top:0;
-            left:0;
-            width:1080px;
-{#            width:100%;#}
-            height:100%;
-        }
-        .horizslides {
-/*            border: 1px solid green;*/
-            cursor:default;
-            position:relative;
-            top:0;
-            left:0;
-            width:1080px;
-{#            width:100%;#}
-            height:100px;
-            overflow:hidden;
-        }
-        .horizslides div img {}
-    </style>
-
-    <div id="jssor_1" class="horizslider">
-        <!-- Loading Screen -->
-        <div data-u="loading" class="horizloading">
-            <div class="horizloadfilter"></div>
-            <div class="horizloadimg"></div>
-        </div>
-        <div data-u="slides" class="horizslides">
+{#<div class="overwrap">#}
+    <div id="carouselTicker" class="carouselTicker">
+        <ul class="carouselTicker__list">
             {% for item in items %}
                 {% if item.isvisible and item.issponsor %}
-                    <div>
+                    <li class="carouselTicker__item">
                         <a href="{{ item.get_absolute_url }}"><img data-u="image" src="{{ item.image.url }}" /></a>
-                    </div>
+                    </li>
                 {% endif %}
             {% endfor %}
-        </div>
+{#            <li class="carouselTicker__item">#}
+{#                <a href="#"><img src="http://placehold.it/190x65?text=B" alt="banner image"></a>#}
+{#            </li>#}
+{#            <li class="carouselTicker__item">#}
+{#                <a href="#"><img src="http://placehold.it/190x65?text=C" alt="banner image"></a>#}
+{#            </li>#}
+{#            <li class="carouselTicker__item">#}
+{#                <a href="#"><img src="http://placehold.it/190x65?text=D" alt="banner image"></a>#}
+{#            </li>#}
+{#            <li class="carouselTicker__item">#}
+{#                <a href="#"><img src="http://placehold.it/190x65?text=E" alt="banner image"></a>#}
+{#            </li>#}
+{#            <li class="carouselTicker__item">#}
+{#                <a href="#"><img src="http://placehold.it/190x65?text=F" alt="banner image"></a>#}
+{#            </li>#}
+        </ul>
     </div>
+{#</div>#}
+
