--- a/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
+++ b/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
@@ -4,12 +4,15 @@
 
 <nav class="navbar yamm" role="navigation">
     <div class="container-fluid">
+
         {% if branding %}
             <div class="navbar-header">
                 <a class="navbar-brand" href="{{ link }}">{{ branding }}</a>
             </div>
         {% endif %}
+
         <div class="nav navbar-nav">
+
             {% for item in items %}
                 {% if item.is_back_up %}
                     </div></div></ul></li>
@@ -19,7 +22,7 @@
                 {% else %}
                     {% if item.is_dropdown_node %}
                         <li class="dropdown yamm-fw">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ item.title }}
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="{{ item.get_absolute_url }}">{{ item.title }}
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                         <div class="yamm-content">
@@ -28,7 +31,7 @@
                         {% if item.is_dropdown_header %}
                             <li class="dropdown-header">{{ item.title }}</li>
                         {% else %}
-                            <li><a href="{{ item.get_absolute_url }}">{{ item.title }}</a></li>
+                            <li><a href="{{ item.get_absolute_url }}">:{{ item.title }}: {{ item.get_absolute_url }}</a></li>
                         {% endif %}
                     {% endif %}
                 {% if forloop.last %}
