--- a/spe_events/static/atce/css/_header.scss
+++ b/spe_events/static/atce/css/_header.scss
@@ -55,7 +55,7 @@
     a {
       padding-top:      20px;
       font-size:        $h3size;
-      font-weight:      $font-light;
+      font-weight:      $font-regular;
       color:            $col-white;
       height:           58px;
 
@@ -63,10 +63,30 @@
 
       &:hover { background-color: $col-atce-greenhover; }
       }
+
+
   }
   li:first-child {
     a {
       padding-left:   0;
     }
   }
+}
+.dropdown-menu {
+  li {
+
+      a {
+        padding:          10px 0 0 10px;
+        font-size:        $h3size;
+        font-weight:      $font-regular;
+        color:            $col-atce-green;
+        height:           58px;
+        //background-color: pink;
+
+        @include text-shadow(0, 0, 0, rgba(0,0,0,0));
+        &:hover { background: none }
+
+      }
+    &:hover { background-color: $col-grey-light; }
+    }
 }
