--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -80,11 +80,17 @@ a:hover { text-decoration: none; }
 
 .navbar { margin-bottom: 0; }
 
-.navbar-nav li a { padding-top: 20px; font-size: 20px; font-weight: 300; color: white; height: 58px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); }
+.navbar-nav li a { padding-top: 20px; font-size: 20px; font-weight: 400; color: white; height: 58px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); }
 
 .navbar-nav li a:hover { background-color: #74d79e; }
 
 .navbar-nav li:first-child a { padding-left: 0; }
+
+.dropdown-menu li a { padding: 10px 0 0 10px; font-size: 20px; font-weight: 400; color: #67c18d; height: 58px; text-shadow: 0 0 0 transparent; }
+
+.dropdown-menu li a:hover { background: none; }
+
+.dropdown-menu li:hover { background-color: #e1e1e1; }
 
 /* =================================================================== */
 /* MAIN CONTENT STYLES FOR ATCE
