--- a/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
+++ b/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
@@ -31,7 +31,7 @@
                         {% if item.is_dropdown_header %}
                             <li class="dropdown-header">{{ item.title }}</li>
                         {% else %}
-                            <li><a href="{{ item.get_absolute_url }}">:{{ item.title }}: {{ item.get_absolute_url }}</a></li>
+                            <li><a href="{{ item.get_absolute_url }}">{{ item.title }}</a></li>
                         {% endif %}
                     {% endif %}
                 {% if forloop.last %}
