Menu Style fix & names readded to BS Rows & Containers

--- a/spe_events/static/atce/css/_basehtml.scss
+++ b/spe_events/static/atce/css/_basehtml.scss
@@ -39,7 +39,7 @@ h6 {
 }
 p {
   font-size:              $psize;
-  font-weight:            $font-light;
+  font-weight:            $font-regular;
 }
 
 * {
