--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -28,7 +28,7 @@ h5 { font-size: 15px; font-weight: 300; }
 
 h6 { font-size: 12px; font-weight: 300; }
 
-p { font-size: 15px; font-weight: 300; }
+p { font-size: 15px; font-weight: 400; }
 
 * { -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; }
 
@@ -86,11 +86,15 @@ a:hover { text-decoration: none; }
 
 .navbar-nav li:first-child a { padding-left: 0; }
 
-.dropdown-menu li a { padding: 10px 0 0 10px; font-size: 20px; font-weight: 400; color: #67c18d; height: 58px; text-shadow: 0 0 0 transparent; }
+.dropdown-menu li { padding: 5px 0; border-bottom: 1px solid #e1e1e1; }
+
+.dropdown-menu li a { padding: 10px 0 0 10px; font-size: 15px; font-weight: 400; color: #67c18d; height: 58px; text-shadow: 0 0 0 transparent; }
 
 .dropdown-menu li a:hover { background: none; }
 
 .dropdown-menu li:hover { background-color: #e1e1e1; }
+
+.dropdown-menu li:first-child a { padding: 10px 0 0 10px; }
 
 /* =================================================================== */
 /* MAIN CONTENT STYLES FOR ATCE
