--- a/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_panels.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_panels.html
@@ -4,7 +4,7 @@
     <p>
     {{ item.order }}<br>
     {{ item.item_list }}<br>
-    {{ item.image }}<br>
+    {{ item.get_image_url }}<br>
     {{ item.title }}<br>
     {{ item.text }}<br>
     {{ item.external_link }}<br>
