--- a/spe_events/templates/spe_events/plugins/image_items/ii_z_elements.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_z_elements.html
@@ -9,6 +9,7 @@
         {{ instance.id }}<br>
         {{ item.order }}<br>
         {{ item.item_list }}<br>
+        {{ item.get_image_url }}<br>
         {{ item.image.url }}<br>
         {{ item.imageposition }}<br>
         {{ item.title }}<br>
