--- a/spe_events/templates/spe_events/plugins/image_items/ii_jumboslider.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_jumboslider.html
@@ -20,7 +20,7 @@
           {% for item in items %}
               {% if item.image and item.image.url and item.isvisible %}
                   {% if forloop.first %}
-                      <div class="item active" style="background-image: url({{ item.image.url }});
+                      <div class="item active" style="background-image: url({{ item.get_image_url }});
                               background-position:{{ item.imageposition }}; background-size: cover;">
                           <a href="{{ item.get_absolute_url }}">
                               <div class="carousel-caption">
@@ -30,7 +30,7 @@
                           </a>
                       </div>
                   {% else %}
-                      <div class="item" style="background-image: url({{ item.image.url }});
+                      <div class="item" style="background-image: url({{ item.get_image_url }});
                               background-position:{{ item.imageposition }}; background-size: cover;">
                           <a href="{{ item.get_absolute_url }}">
                               <div class="carousel-caption">
