--- a/spe_events/templates/spe_events/plugins/image_items/ii_jumbotron.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_jumbotron.html
@@ -4,7 +4,7 @@
 {% for item in items %}
     {% if item.image and item.image.url and item.isvisible %}
         <a href="{{ item.get_absolute_url }}"><div class="col-xs-12 padZero jumbotron" style="
-                background-image: url({{ item.image.url }}); background-position:{{ item.imageposition }};
+                background-image: url({{ item.get_image_url }}); background-position:{{ item.imageposition }};
                 background-size: cover; height: {{ instance.pluginheight }}px;"></div></a>
     {% endif %}
 {% endfor %}
