--- a/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
@@ -20,13 +20,13 @@
           {% for item in items %}
               {% if item.image and item.image.url and item.isvisible %}
                   {% if forloop.first %}
-                      <div class="item active" style="background-image: url({{ item.image.url }});
+                      <div class="item active" style="background-image: url({{ item.get_image_url }});
                               background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px">
                           <a href="{{ item.get_absolute_url }}">
                           </a>
                       </div>
                   {% else %}
-                      <div class="item" style="background-image: url({{ item.image.url }});
+                      <div class="item" style="background-image: url({{ item.get_image_url }});
                               background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px">
                           <a href="{{ item.get_absolute_url }}">
                           </a>
