--- a/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor_BACK.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_conveyor_BACK.html
@@ -124,7 +124,7 @@
             {% for item in items %}
                 {% if item.isvisible and item.issponsor %}
                     <div>
-                        <a href="{{ item.get_absolute_url }}"><img data-u="image" src="{{ item.image.url }}" /></a>
+                        <a href="{{ item.get_absolute_url }}"><img data-u="image" src="{{ item.get_image_url }}" /></a>
                     </div>
                 {% endif %}
             {% endfor %}
