--- a/spe_events/templates/spe_events/plugins/image_items/ii_text_below.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_text_below.html
@@ -13,7 +13,7 @@
                 {% elif items.count == 1 %}
                     col-xs-12
                 {% endif %} " style="height: {{ instance.pluginheight }}px">
-                <div class="speakerimage" style="background: url({{ item.image.url }}) no-repeat {{ item.imageposition }} / cover;"></div>
+                <div class="speakerimage" style="background: url({{ item.get_image_url }}) no-repeat {{ item.imageposition }} / cover;"></div>
                 <div class="speakertext">
                     <div class="speakertitle text-center">{{ item.title }}</div>
                     <div class="text-center">{{ item.text | safe }}</div>
