spacer plugin and spacing to sponsors carousel

--- a/spe_custom_menus/templates/spe_custom_menus/zBACK_YAMM_menu.html
+++ b/spe_custom_menus/templates/spe_custom_menus/zBACK_YAMM_menu.html
@@ -2,7 +2,7 @@
     <link href="css/yamm.css" rel="stylesheet">
 </head>
 
-<nav class="yamm navbar" role="navigation">
+<nav class="navbar yamm" role="navigation">
     <div class="container-fluid">
 
         {% if branding %}
