Content area padding & Mini slider full image link

--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -7,6 +7,11 @@
 /* =================================================================== */
 /* PANELS */
 
+.padTopBottom  {
+  padding-top:            20px;
+  padding-bottom:         20px;
+}
+
 .tiletitlerow {
   h2 {
     margin:               20px 0;
