--- a/spe_events/templates/atce/atce_homepage.html
+++ b/spe_events/templates/atce/atce_homepage.html
@@ -7,11 +7,11 @@
 
     <div class="container-fluid">{% placeholder "Feature Slider" %}</div>
 
-    <div class="container-fluid">{% placeholder "Content Area One" %}</div>
+    <div class="padTopBottom container-fluid">{% placeholder "Content Area One" %}</div>
 
     <div class="container-fluid sponsorBar">{% placeholder "Sponsor Band" %}</div>
 
-    <div class="container-fluid">{% placeholder "Content Area Two" %}</div>
+    <div class="padTopBottom container-fluid">{% placeholder "Content Area Two" %}</div>
 
 {#    <div class="row byTheNumbersBar">#}
 {#        <div class="col-xs-12 text-center">#}
@@ -39,9 +39,9 @@
 {#        </div>#}
 {#    </div>#}
 
-    <div class="container-fluid">{% placeholder "Content Area Three" %}</div>
+    <div class="padTopBottom container-fluid">{% placeholder "Content Area Three" %}</div>
 
-    <div class="container-fluid">{% placeholder "Content Area Four" %}</div>
+    <div class="padTopBottom container-fluid">{% placeholder "Content Area Four" %}</div>
 
     <div class="container-fluid">{% placeholder "Map" %}</div>
 
