--- a/spe_events/templates/atce/atce_subpage.html
+++ b/spe_events/templates/atce/atce_subpage.html
@@ -5,11 +5,11 @@
 
 {% block cms_content %}
 
-    <div class="container-fluid">{% placeholder "Content Area One" %}</div>
+    <div class="padTopBottom container-fluid">{% placeholder "Content Area One" %}</div>
 
-    <div class="container-fluid">{% placeholder "Content Area Two" %}</div>
+    <div class="padTopBottom container-fluid">{% placeholder "Content Area Two" %}</div>
 
-    <div class="container-fluid">{% placeholder "Content Area Three" %}</div>
+    <div class="padTopBottom container-fluid">{% placeholder "Content Area Three" %}</div>
 
 {% endblock cms_content %}
 
