--- a/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
@@ -20,17 +20,14 @@
           {% for item in items %}
               {% if item.image and item.image.url and item.isvisible %}
                   {% if forloop.first %}
+                      <a href="{{ item.get_absolute_url }}">
                       <div class="item active" style="background-image: url({{ item.get_image_url }});
-                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px">
-                          <a href="{{ item.get_absolute_url }}">
-                          </a>
-                      </div>
+                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px"></div></a>
                   {% else %}
+                      <a href="{{ item.get_absolute_url }}">
                       <div class="item" style="background-image: url({{ item.get_image_url }});
-                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px">
-                          <a href="{{ item.get_absolute_url }}">
+                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px"></div>
                           </a>
-                      </div>
                   {% endif %}
               {% endif %}
 
