--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -105,6 +105,8 @@ a:hover { text-decoration: none; }
 /* Images */
 /* =================================================================== */
 /* PANELS */
+.tile, .tile-blue, .tile-white, .tile-alert, .tile-transparent, .tile-poll, .eventsNearYou { padding: 15px; }
+
 .padTopBottom { padding-top: 20px; padding-bottom: 20px; }
 
 .tiletitlerow h2 { margin: 20px 0; }
