--- a/spe_ui_components/templates/tabs/accordionheader.html
+++ b/spe_ui_components/templates/tabs/accordionheader.html
@@ -3,12 +3,13 @@
 <div id="accordion-plugin-{{ instance.id }}" class="panel-group">
     {% for accordion in instance.child_plugin_instances %}
         <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion-plugin-{{ instance.id }}"
-                       href="#collapse-{{ accordion.id }}">{{ accordion.title }}</a>
-                </h4>
-            </div>
+            <a data-toggle="collapse" data-parent="#accordion-plugin-{{ instance.id }}" href="#collapse-{{ accordion.id }}">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        {{ accordion.title }}
+                    </h4>
+                </div>
+            </a>
         </div>
         <div id="collapse-{{ accordion.id }}" class="panel-collapse collapse">
             <div class="panel-body">
