More accordion fix & header & footer fixes

--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -31,7 +31,9 @@
 .spacerRow {
   height: 30px;
 }
-
+.panel-group {
+  margin:                 0;
+}
 .panel-intro {
   border:                 0;
   .panel-body {
