--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -34,7 +34,7 @@
             <div class="col-md-5 col-md-offset-1 visible-md visible-lg mainLogo text-left"><img src="{% static 'atce/imgs/SPE_ATCE_Logo_Horiz.svg' %}" class="mainLogoImg img-responsive"/></div>
             <div class="col-md-5 col-md-offset-1 visible-xs visible-sm mainLogo text-center"><img src="{% static 'atce/imgs/SPE_ATCE_Logo_Horiz.svg' %}" class="mainLogoImg img-responsive" style="margin:auto;" /></div>
             <div class="col-md-5 topAddress text-center">
-                <h3>OCTOBER 9-11</h3>
+                <h3>9-11 OCTOBER 2017</h3>
                 <p>Henry B. Gonzalez Convention Center<br>
                 San Antonio, Texas, USA</p>
             </div>
