--- a/spe_ui_components/templates/tabs/accordionheader.html
+++ b/spe_ui_components/templates/tabs/accordionheader.html
@@ -6,7 +6,7 @@
             <a data-toggle="collapse" data-parent="#accordion-plugin-{{ instance.id }}" href="#collapse-{{ accordion.id }}">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        {{ accordion.title }}
+                        {{ accordion.title }}<i class="fa fa-plus" aria-hidden="true" style="float:right;"></i>
                     </h4>
                 </div>
             </a>
