--- a/spe_events/static/atce/css/_header.scss
+++ b/spe_events/static/atce/css/_header.scss
@@ -74,11 +74,11 @@
 }
 .dropdown-menu {
   li {
-    padding: 5px 0;
+    padding: 10px;
     border-bottom: 1px solid $col-grey-light;
 
       a {
-        padding:          10px 0 0 10px;
+        padding:          10px 0 0 0;
         font-size:        $h5size;
         font-weight:      $font-regular;
         color:            $col-atce-green;
@@ -91,7 +91,7 @@
     &:hover { background-color: $col-grey-light; }
     }li:first-child {
     a {
-        padding:          10px 0 0 10px;
+        //padding:          10px 0 0 10px;
     }
   }
 }
