Open Sans Main Font

--- a/spe_events/static/atce/css/_vars.scss
+++ b/spe_events/static/atce/css/_vars.scss
@@ -13,7 +13,8 @@ $col-grey-dark:         #363636;
 $col-grey:              grey;
 $col-grey-light:        #e1e1e1;
 
-$font-main:             'Montserrat', sans-serif;
+//$font-main:             'Montserrat', sans-serif;
+$font-main:             'Open Sans', sans-serif;
 $font-titles:           'Montserrat', sans-serif;
 $font-titles2:          'Ubuntu', sans-serif;
 
