--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -12,7 +12,7 @@
 /* VARIABLES
 ====================================================================== */
 /* Images */
-body { font-family: "Montserrat", sans-serif; }
+body { font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3, h4, h5, h6 { font-family: "Montserrat", sans-serif; font-weight: 400; margin: 0 0 10px 0; }
 
