--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -4,6 +4,7 @@
     {% block web_fonts %}
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200, 300,400,400i,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:500" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">
     {% endblock web_fonts %}
 
